--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <table cellspacing="20">
   <tr>
-    <td>  <img src="C:\Users\hp\Downloads\NehaPicture.jpg" width="200" height="400" alt="Neha Chopra Profile Picture" title="Neha Chopra Profile Picture"></td>
+    <td>  <img src="NehaPicture.jpg" width="200" height="400" alt="Neha Chopra Profile Picture" title="Neha Chopra Profile Picture"></td>
 <td>
 <h1>Neha Chopra</h1>
 <p><em>Junior Team Lead at <a href="https://www.imarkinfotech.com/">Imark Infotech</a> in <strong>Guest Posting Team</strong>.</em></p>
